// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page it changes classes if isActive or isDisabled props change 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Page
    classes={Object {}}
    isActive={false}
    isDisabled={false}
    onPageChange={[Function]}
    page={4}
    styles={Object {}}
    useBootstrapClasses={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className=""
        href="#"
        onClick={[Function]}
        style={Object {}}
      >
        4
      </a>,
      "className": "",
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 4,
        "className": "",
        "href": "#",
        "onClick": [Function],
        "style": Object {},
      },
      "ref": null,
      "rendered": 4,
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className=""
          href="#"
          onClick={[Function]}
          style={Object {}}
        >
          4
        </a>,
        "className": "",
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": 4,
          "className": "",
          "href": "#",
          "onClick": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": 4,
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Page it changes classes if isActive or isDisabled props change 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Page
    classes={Object {}}
    isActive={true}
    isDisabled={false}
    onPageChange={[Function]}
    page={4}
    styles={Object {}}
    useBootstrapClasses={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className=""
        href="#"
        onClick={[Function]}
        style={Object {}}
      >
        4
      </a>,
      "className": "",
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 4,
        "className": "",
        "href": "#",
        "onClick": [Function],
        "style": Object {},
      },
      "ref": null,
      "rendered": 4,
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className=""
          href="#"
          onClick={[Function]}
          style={Object {}}
        >
          4
        </a>,
        "className": "",
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": 4,
          "className": "",
          "href": "#",
          "onClick": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": 4,
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Page it changes classes if isActive or isDisabled props change 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Page
    classes={Object {}}
    isActive={false}
    isDisabled={true}
    onPageChange={[Function]}
    page={4}
    styles={Object {}}
    useBootstrapClasses={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="undefined"
        href="#"
        onClick={[Function]}
        style={Object {}}
      >
        4
      </a>,
      "className": "",
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": 4,
        "className": "undefined",
        "href": "#",
        "onClick": [Function],
        "style": Object {},
      },
      "ref": null,
      "rendered": 4,
      "type": "a",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="undefined"
          href="#"
          onClick={[Function]}
          style={Object {}}
        >
          4
        </a>,
        "className": "",
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": 4,
          "className": "undefined",
          "href": "#",
          "onClick": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": 4,
        "type": "a",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
